--- a/Init.ipynb
+++ b/Init.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Init.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jinchen1036/Assignment1_Filx/blob/master/Init.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "1HpkHhXcrLrp",
@@ -32,7 +21,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import numpy as np "
       ],
       "execution_count": 0,
       "outputs": []
